fix overflow

--- a/src/features/amUI/users/List.module.css
+++ b/src/features/amUI/users/List.module.css
@@ -4,7 +4,6 @@
   align-items: center;
   flex-direction: row;
   font-size: 20px;
-  width: 100%;
   gap: 0.5rem;
   padding: 0.5rem 1.25rem;
 }
